# honto-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
HonTo_Engine/: HonTo_Engine.slnx
HonTo_Engine/HonTo_Engine/: HonTo_Engine.vcxproj  HonTo_Engine.vcxproj.filters  LocalSigning.props.example
cmake/: HonToEngineConfig.cmake.in
docs/: HONTO_ACADEMY_GUIDE_KO.md  HONTO_ENGINE_GUIDE_KO.md  HONTO_ENGINE_SOURCE_GUIDE_KO.md  HONTO_GETTING_STARTED_KO.md  HONTO_INSTALLER_GUIDE_KO.md  HONTO_VISUAL_STUDIO_GUIDE_KO.md
engine/include/honto/: Application.h  Audio.h  Color.h  Components.h  Easy.h  Entity.h  HonTo.h  Input.h  Level.h  Math.h  Raycast.h  Renderer2D.h  Scene.h  SceneGraph.h  Texture.h  TileMap.h  Transform2D.h  Window.h
engine/src/: Application.cpp  Audio.cpp  Input.cpp  Level.cpp  Raycast.cpp  Renderer2D.cpp  Scene.cpp  SceneGraph.cpp  Texture.cpp  TileMap.cpp  WindowWin32.cpp
examples/quickstart/: CMakeLists.txt  README.md
examples/quickstart/src/: main.cpp
sandbox/levels/: platform.honto  platform.json  platform_tiled.json
sandbox/src/: main.cpp
scripts/: Build-HonToInstaller.ps1  Build-HonToReleaseAssets.ps1  Build-HonToSdk.ps1  Install-HonToSdk.ps1  New-HonToProject.ps1  New-HonToVsProject.ps1  Remove-LocalDevSigning.ps1  Setup-LocalDevSigning.ps1  Sign-Binary.ps1
templates/HonToStarter/: CMakeLists.txt  README.md
templates/HonToStarter/src/: main.cpp
templates/HonToStarterVS/: HonToStarterVS.sln  HonToStarterVS.vcxproj  HonToStarterVS.vcxproj.filters  README.md
templates/HonToStarterVS/src/: main.cpp
vs/: HonToEngine.props
